--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,12 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<4.0
+    - python >=3.7
     - pip
     - poetry
   run:
-    - python >=3.7,<4.0
-    - xeger >=0.3.5,<0.4.0
+    - loguru >=0.7.0
+    - python >=3.7
+    - rstr >=3.2.1
 
 test:
   imports:
